# heigh-ho

./: CMakeLists.txt  LICENSE  README.md  main.cpp  main.cu
include/: block.hpp  blockchain.hpp  proof.cuh  sha256_gpu.cuh
src/: block.cpp  blockchain.cpp  miner.cu  proof.cu  sha256.cpp  sha256_gpu.cu
